src/objects/Third_Party__c.object
<CustomObject><fields>
        <fullName>HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Recourse Mechanism</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>NonHR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-HR Recourse Mechanism</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Participation_Status__c</fullName>
        <label>Participation Number</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Third Parties</relationshipLabel>
        <relationshipName>Third_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Third_Party_Master_List__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Third Party Master List</label>
        <referenceTo>Third_Party_Master_List__c</referenceTo>
        <relationshipLabel>Third Parties</relationshipLabel>
        <relationshipName>Third_Parties</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-HR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Website__c</fullName>
        <description>Website as indicated by the User.</description>
        <inlineHelpText>What is the Official Website of this Third Party?</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields><fields>
        <fullName>updateName__c</fullName>
        <formula>not(isBlank( Third_Party_Master_List__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>updateName</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Third Party</label><nameField>
        <label>Third Party Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Third Parties</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><recordTypes>
        <fullName>Resolution_Provider</fullName>
        <active>true</active>
        <label>Resolution Provider</label>
    </recordTypes><recordTypes>
        <fullName>Statutory_Body</fullName>
        <active>true</active>
        <label>Statutory Body</label>
    </recordTypes><recordTypes>
        <fullName>Verification</fullName>
        <active>true</active>
        <label>Verification Method</label>
    </recordTypes><validationRules>
        <fullName>Website_or_Third_Party_Master_Required</fullName>
        <active>true</active>
        <description>A Website or Third Party Master List must be provided.</description>
        <errorConditionFormula>and(isBlank(Website__c), isBlank(Third_Party_Master_List__c))</errorConditionFormula>
        <errorMessage>You must provide a Website or a Third Party Master List record.</errorMessage>
    </validationRules></CustomObject>